# influencemapper-service

./: .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
core/: Dockerfile
core/app/: listener.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: Upload.vue
tests/: Dockerfile  test_handler.py
web/: Dockerfile
web/app/: server.py
web/app/templates/: result.html
web/tests/: Dockerfile  test_publish.py
